Reading inputs are blocking and fixed element overflowing

--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 html, body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: black;
   margin: 0;
   cursor: text;
@@ -19,8 +19,8 @@ html, body {
 }
 
 #terminal {
-  height: 100vh;
-  width: 100vw;
+  min-height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
